# diff_swarm_robot

./: .dockerignore  .gitconfig  .gitignore  .gitmodules  README.md  defaults.yaml  docker-compose.yaml  maze.py  requirements.txt  simulation.ipynb
code/behaviors/pso/: package.xml  setup.cfg  setup.py
code/behaviors/pso/config/: params.yaml
code/behaviors/pso/pso/: control.py  copilot.py  pso.py
code/behaviors/pso_adaptative/: README.md  package.xml  setup.cfg  setup.py
code/behaviors/pso_adaptative/config/: params.yaml
code/behaviors/pso_swarm/: package.xml  setup.cfg  setup.py
code/behaviors/reactive/: CMakeLists.txt
code/simulation/: package.xml  setup.py
code/simulation/launch/: cop_sim_spawn_robot.launch.py
code/simulation/models/: Robot_TCC2.ttm  Robot_TCC2_v1.ttm  Robot_TCC2_v2.ttm  TCC2_Scene.ttt  basic_maze.ttt  complex_maze.ttt  ePuck.ttm  one_wall.ttt
code/simulation/simulation/: cop_sim_imu.py  cop_sim_spawn_robot.py
src/behaviors/reactive/: package.xml
src/odometry/: CMakeLists.txt  package.xml
src/odometry/src/: encoder.cpp
src/robot/: CMakeLists.txt  package.xml
src/robot/config/: gazebo.yaml
src/robot/launch/: gz_forteress.launch.py  robot.launch.py  rviz.launch.py
src/robot/urdf/: USAGE.md  empty_world.world  robot_model.urdf  robot_model.xacro  test.urdf
src/simulation/: package.xml  setup.py
src/simulation/models/: Simple1.ttm
src/simulation/simulation/: cop_sim_imu.py  cop_sim_spawn_robot.py  robot_interface.py
tools/: alternative_pso.py  setup_env.sh  simulation.ipynb  start_coppelia
(+9 files in other folders)
